[macOS] 3 TestWebKitAPI.GetDisplayMediaTest API tests time out https://bugs.webkit.org/show_bug.cgi?id=240813 rdar://92831194

Reviewed by Youenn Fablet.

* Source/WebKit/UIProcess/Cocoa/UIDelegate.mm:
(WebKit::UIDelegate::UIClient::decidePolicyForUserMediaPermissionRequest): Don't
prompt for getDisplayMedia if the UI delegate implements the old SPI.

Canonical link: https://commits.webkit.org/250883@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294666 268f45cc-cd09-0410-ab3c-d52691b4dbfc